WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259887
[visionOS] AudioSession interruptions do not stop playback
https://bugs.webkit.org/show_bug.cgi?id=259887
Summary
[visionOS] AudioSession interruptions do not stop playback
Aditya Keerthi
Reported
2023-08-07 10:05:55 PDT
rdar://112044261
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2023-08-07 10:21:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16443
EWS
Comment 2
2023-08-07 16:48:58 PDT
Committed
266665@main
(ac6294fe9e54): <
https://commits.webkit.org/266665@main
> Reviewed commits have been landed. Closing PR #16443 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug